<resources>
    <string name="app_name">Pomodoro</string>
    
    <!-- Home Screen -->
    <string name="start_timer">Start</string>
    <string name="pause_timer">Pause</string>
    <string name="clear_timer">Reset</string>
    <string name="achievements">Achievements</string>
    <string name="settings">Settings</string>
    <string name="time_format" formatted="false">%02d:%02d:%02d</string>
    <string name="timer_default_time">00:25:00</string>
    
    <!-- Timer states -->
    <string name="work_session"></string>
    <string name="break_session">Break Time</string>
    <string name="timer_completed">Completed!</string>
    <string name="timer_paused">Paused</string>
    
    <!-- Settings Screen -->
    <string name="settings_title">Settings</string>
    <string name="google_login">Connect Google Account</string>
    <string name="google_login_success">Connected</string>
    <string name="logout">Logout</string>
    <string name="web_sync_info">You can also check your records by linking with the same account on the Web Version!</string>
    <string name="timer_duration">Default Time</string>
    <string name="timer_duration_summary">Setting Default Time</string>
    
    <!-- Achievements Screen -->
    <string name="achievements_title">Achievements</string>
    <string name="session_completed">Success</string>
    <string name="session_cancelled">Failed</string>
    <string name="filter_all">Total</string>
    <string name="filter_completed">Success</string>
    <string name="filter_cancelled">Failed</string>
    <string name="no_sessions">No records yet</string>
    
    <!-- Timer duration options -->
    <string name="duration_15_min">15 Min</string>
    <string name="duration_25_min">25 Min</string>
    <string name="duration_30_min">30 Min</string>
    <string name="duration_50_min">50 Min</string>
    
    <!-- Notifications -->
    <string name="notification_channel_name">Pomodoro Timer</string>
    <string name="notification_channel_description">Timer ended</string>
    <string name="notification_title">Timer ended</string>
    <string name="notification_work_completed">Time is completed. You may have a break!</string>
    <string name="notification_break_completed">Break time is completed. Let\'s get back to focus!</string>
    
    <!-- Common -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    
    <!-- Errors -->
    <string name="error_login_failed">Login failed</string>
    <string name="error_network">Please check your network connection</string>
    <string name="error_unknown">An unexpected error occurred</string>
</resources>