<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.app.pomodoro.ui.fragment.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">
        
        <action
            android:id="@+id/action_home_to_settings"
            app:destination="@id/settingsFragment" />
        
        <action
            android:id="@+id/action_home_to_achievements"
            app:destination="@id/achievementsFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.app.pomodoro.ui.fragment.SettingsFragment"
        android:label="@string/settings_title"
        tools:layout="@layout/fragment_settings">
        
        <action
            android:id="@+id/action_settings_to_home"
            app:destination="@id/homeFragment" />
    </fragment>

    <fragment
        android:id="@+id/achievementsFragment"
        android:name="com.app.pomodoro.ui.fragment.AchievementsFragment"
        android:label="@string/achievements_title"
        tools:layout="@layout/fragment_achievements">
        
        <action
            android:id="@+id/action_achievements_to_home"
            app:destination="@id/homeFragment" />
    </fragment>

</navigation>